# codex

./: README.md  makefile  pyproject.toml
docs/: 00_intro.html  00_intro.md  01_basic.md  01_search.html  01_search.md  02_binary.html  02_binary.md  02_sort.md  03_sort.md  04_sort_fast.md  05_rankings.md  06_linear_sort.md  _quarto.yml  appendix-notation.md  appendix-python.md  index.html  index.qmd  lessons_1.md  part1.html
src/codex/: types.py
src/codex/search/: binary.py  linear.py
src/codex/sort/: basic.py
tests/search/: test_binary.py  test_linear.py
tests/sort/: test_fundamentals.py
